--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-body{
-  margin:0;
-  background:darkgray;
-  overflow: hidden;
-  text-align:center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-#myCanvas{
-  background: lightgray;
+body {
+  background-color: darkgray;
+  overflow: hidden;
+  text-align: center;
+}
+
+#myCanvas {
+  background-color: lightblue;
 }
